fixtures/invalid/package-subpath-private-import/packages/consumer/src/public.ts
import { privateValue } from "@fixture/producer/src/private";
export const consumerValue = privateValue;
